--- a/CSS/base.css
+++ b/CSS/base.css
@@ -32,13 +32,13 @@ a {
 	padding:0;
 	margin:0;
 }
-
+/*
 #content{
 	background-color: #fff;
 	padding: 0 15px 10px 15px;
 
 } 
-
+*/
 #footer{
 	background-color: #fff;
 	padding:15px;
