--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -82,10 +82,8 @@ textarea {
    ========================================================================== */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
-
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)
-(The key items are picked out in bold type.)
-equalise for various browsers and change #header to header*/
+(The key items are picked out in bold type.) equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
@@ -94,16 +92,20 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
-header {width:920px; height:180px; padding:0; border:10px white solid; background: url(images/header3.jpg); margin:10px auto;
+header {width:920px; height:180px; padding:0; border:10px white solid;
+background: url(images/header3.jpg); margin:10px auto;
 }
-h1 { font-size:300%; color :white; position: relative; left:90px; top: 10px;
+h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon;
+#content { background-color:transparent; border-left:10px white solid;
+border-right:10px white solid; border-bottom:10px white solid; width: 904px;
+margin-top:10px; margin-left:auto; margin-right:auto; padding:8px;
+font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color: black; margin:0 0 10px 0;
+h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
 h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
@@ -111,7 +113,8 @@ h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
+#midcol { margin-left:315px; margin-right:145px; margin-top:10px;
+vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
 nav ul { margin:10px 0 10px 0; width:135px; float:right;
@@ -122,35 +125,14 @@ nav li { list-style-type:none;
 /* set general side button styles */
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
-
-/* Listing 2-1b. The CSS Style Sheet for Listing 2-1a (gallery-one-col.css
-reset browsers to give cross browser uniformity*
-html, body, p, lu, li { margin:0; padding:0;
-}
-*/
-img { border:0;
-}
-/* Set general thumbnail styles */
-/*place the column on the page*/
-#col-1 { position: absolute; top: 0; left: 0;
-}
-/*remove bullets from the list elements*/
-li { margin: 10px; list-style-type:none;
-}
-/* MouseOut state (default) - create a space for the larger images and hide them*/
-#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 140px; visibility: hidden;
-}
-/* MouseOver state (hover)- reveal larger image */
-#col-1 a:hover { background: white;
-}
-#col-1 a:hover img.hid { visibility:visible;
-}
 /* set general anchor styles and include the zoom fix for IE6*/
-li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
+li.btn a { display: block; color: white; font-weight: bold;
+text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
+li.btn a { background:#559a55; color: white; border: 5px outset #559a55;
+padding-bottom:3px;
 }
 /* mouseover */
 li.btn a:hover { background: red; color:white; border: 5px outset red;
@@ -163,12 +145,8 @@ br.clear { clear:both;
 #midcol img { margin-left:10px;
 }
 /*change #footer to footer */
-footer {display:block; border-top: 1px solid orange; margin: 10px;clear:both; color:maroon; text-align:center;font-family: "Trebuchet MS", Arial, Helvetica, sans-serif; font-weight: bold;}
-article {display:block; font-family: Georgia, "Times New Roman", Times, serif; margin: 5px;}
-/*change #footer to footer 
 footer { clear:both; color:maroon; text-align:center;
-}
-*/
+} 
 
 .thermometer-widget {
   margin: auto;
@@ -331,12 +309,13 @@ footer { clear:both; color:maroon; text-align:center;
   height: 3px;
   background-color: yellow;
 }
+/*
 div body header #content { margin:0; padding:0; border:0;
 }
 /*set attributes for consistent appearance in all browsers
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-*/
+*
 header#html5-ch1-7header.data .fixed-top {
   background: #07062f;
 }
@@ -359,10 +338,10 @@ header#html5-ch1-7header.data .logo img {
   max-height: 40px;
 }
 
-/*set images to have no borders*/
+/*set images to have no borders*
 img { border:0;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
 p { 
@@ -376,7 +355,7 @@ p {
 div.wrapper { text-align:center;
 }
 
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header,
 footer,
 section,
@@ -385,7 +364,7 @@ nav {
   display: block;
 }
 
-/*remove the # from #header*/
+/*remove the # from #header*
 header#html5-ch1-7header.data {
   width: 960px;
   height: 180px;
@@ -446,26 +425,26 @@ div#html5-ch1-7col.data {
 
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
-}*/
+}*
 nav#html5-ch1-7nav ul {
   margin: 10px 0 10px 0;
   width: 135px;
   float: right;
 }
 
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav#html5-ch1-7nav li {
   list-style-type: none;
 }
 
-/* set general side button styles */
+/* set general side button styles *
 li.btn {
   margin-bottom: 3px;
   text-align: center;
   width: 130px;
 }
 
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 li.btn a {
   display: block;
   color: white;
@@ -475,7 +454,7 @@ li.btn a {
 }
 
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 li.btn a {
   background: #559a55;
   color: white;
@@ -483,14 +462,14 @@ li.btn a {
   padding-bottom: 3px;
 }
 
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
   border: 5px outset red;
 }
 
-/*mouse active*/
+/*mouse active*
 li.btn a:active {
   background: maroon;
   border: 5px inset maroon;
@@ -509,7 +488,7 @@ footer#html5style2.data {
   color: maroon;
   text-align: center;
 } 
-*/
+*
 footer#html5style2.data {display:block; border-top: 1px solid orange; margin: 10px;clear:both; color:maroon; text-align:center;font-family: "Trebuchet MS", Arial, Helvetica, sans-serif; font-weight: bold;}
 
 #overlay {
