--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -2022,7 +2022,7 @@ Listing 2-6b provides the CSS presentation instructions for a 3 column gallery s
 /*set menu buttons*/
 
 /* Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) 
-*set attributes for consistent appearance in all browsers*/ 
+*set attributes for consistent appearance in all browsers* 
 html, body, p, ul, li, h1, h2 { margin:0; padding: 0;} 
 /*set images to have no borders*/ 
 img { border:0; 
@@ -2515,9 +2515,10 @@ li {
 	clear: both;
 }
 
-/*reset browsers to give cross browser uniformity*/
+/*reset browsers to give cross browser uniformity*
 html, body, p, lu, li { margin:0; padding:0;
 }
+*/
 img { border:0;
 }
 /* Set general thumbnail styles */
