--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -473,7 +473,7 @@ nav a:visited { color: navy;
 /*hovering over the active tab shows navy text*/
 nav a.active:hover { background: #cfecf5; color: navy;
 }
-/*set the position of the content to move it close up to the menu tabs*/
+/*set the position of the content to move it close up to the menu tabs*
 div#content { 
   font : 0.9em/1.3em "bitstream vera sans", verdana; 
   position:relative;  
@@ -484,8 +484,8 @@ div#content {
   border-top: none; 
   z-index: 2;
 }
-
-                article { float:right; width:70%; background-color:#FF9966; margin-bottom:1em; text-align: center;
+*/
+               /* article { float:right; width:70%; background-color:#FF9966; margin-bottom:1em; text-align: center;
                     border: 1px solid rgba(0, 0, 0, .1);
                     background: #58a linear-gradient(#FF9966, #58a);
                     border-radius: .2em;
@@ -499,7 +499,7 @@ div#content {
                     }
                 footer { clear:both; background-color:#FF9966; text-align:center; padding: .3em .8em;
                     border: 1px solid rgba(0, 0, 0, .1);
-                    /* background: #58a linear-gradient(#FF9966, #58a); */
+                    /* background: #58a linear-gradient(#FF9966, #58a); *
                     border-radius: .2em;
                     box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
                     color: white;
