--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -131,11 +131,11 @@ width: 1010px
 	padding:0;
 	margin:0;
 }
-
+/*
 #content{
 	background-color: #fff;
 	padding: 0 15px 10px 15px;
-
+    */
 } 
 
 #footer{
