--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -105,9 +105,9 @@ border-right:10px white solid; border-bottom:10px white solid; width: 904px;
 margin-top:10px; margin-left:auto; margin-right:auto; padding:8px;
 font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 0;
+h2 { font-size:x-large; color:inherit; margin:0 0 10px 0;
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0;
+h3 { font-size:large; color:inherit; margin:0 0 6px 0;
 }
 #leftcol { float:left; width: 310px; vertical-align:top;
 }
