--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -105,7 +105,7 @@ border-right:10px white solid; border-bottom:10px white solid; width: 904px;
 margin-top:10px; margin-left:auto; margin-right:auto; padding:8px;
 font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color:inherit; margin:0 0 10px 0;
+h2 { font-size:125%; color:inherit; margin:0 0 10px 0;
 }
 h3 { font-size:100%; color:inherit; margin:0 0 6px 0;
 }
