--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -103,7 +103,7 @@ width:480px;
 #content { background-color:transparent; border-left:10px white solid;
 border-right:10px white solid; border-bottom:10px white solid; width: 904px;
 margin-top:10px; margin-left:auto; margin-right:auto; padding:8px;
-font-size:medium; color:maroon;
+font-size:100%; color:maroon;
 }
 h2 { font-size:125%; color:inherit; margin:0 0 10px 0;
 }
