--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -105,9 +105,9 @@ border-right:10px white solid; border-bottom:10px white solid; width: 904px;
 margin-top:10px; margin-left:auto; margin-right:auto; padding:8px;
 font-size:100%; color:maroon;
 }
-h2 { font-size:125%; color:inherit; margin:0 0 10px 0;
+h2 { font-size:x-large; color:inherit; margin:0 0 10px 0;
 }
-h3 { font-size:100%; color:white; margin:0 0 6px 0;
+h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
 #leftcol { float:left; width: 310px; vertical-align:top;
 }
@@ -4581,6 +4581,7 @@ footer#html5style2footer {
 }
 
 /* https://www.reddit.com/r/VISITDURBAN/comments/1q2745h/why_i_started_visit_durban_from_new_yorkusa/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button */
+
 
 
 
