--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -112,7 +112,7 @@ background: url(images/header3.jpg); margin:10px auto;
   border-width: 10px;
   border-left-width: 0px;
 }
-h1 { font-size:300%; color:fushia; position: relative; left:90px; top: 5px;
+h1 { font-size:300%; color:fuchsia; position: relative; left:90px; top: 5px;
 width:480px;
 }
 #rosette { position:relative; left:785px; top: 10px;
@@ -4598,6 +4598,7 @@ footer#html5style2footer {
 }
 
 /* https://www.reddit.com/r/VISITDURBAN/comments/1q2745h/why_i_started_visit_durban_from_new_yorkusa/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button */
+
 
 
 
