--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -10,6 +10,10 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+    @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+    @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+/*
+   
    html.ui-mobile {
   color: black;
 }
@@ -80,8 +84,6 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
-@import url('https://fonts.googleapis.com/css?family=Raleway:300');
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)
 (The key items are picked out in bold type.) equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
