--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -2250,10 +2250,10 @@ table {
 li > ul,
 li > ol {
   margin-bottom: 0; }
-
+/*
 h1, h2, h3, h4, h5, h6 {
   font-family: Georgia, serif; }
-
+*/
 ::-moz-selection, ::selection {
   background-color: black;
   color: white; }
