--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -126,7 +126,7 @@ font-size:100%; color:maroon;
 }
 h2 { font-size:x-large; color:inherit; margin:0 0 10px 0;
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0;
+h3 { font-size:100%; color:white; margin:0 0 6px 0;
 }
 #leftcol { float:left; width: 310px; vertical-align:top;
 }
