--- a/style.css
+++ b/style.css
@@ -629,7 +629,7 @@ html, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
 
 /* **************************************************************************** */
 
-/* ##### flexbox grid website ################################# */
+/* ##### flexbox grid website ################################# *
 body {
   font-family: "Open Sans", sans-serif;
   color: #000;
