--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -1,4 +1,4 @@
-q/*equalise all the margins, paddings and borders built into various browsers*/  
+/*equalise all the margins, paddings and borders built into various browsers*/  
 div body header #content { margin:0; padding:0; border:0; 
 }
 body { background:#fff url(images/green-grad.jpg) repeat-x; margin:auto; box-shadow: 0 0 0 10px #665;
