--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -41,7 +41,7 @@ nav li a { display: block; color: white; font-weight: bold; text-decoration: non
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-nav li a { background:#559a55; font-size: 80%; color: white; border: 5px outset #559a55; padding-bottom:3px;
+nav li a { background:#559a55; font-size: 80%; border: 5px outset #559a55;
 }
 /* mouseover */
 nav li a:hover { background: red;  color:white; border: 5px outset red;
