--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -37,7 +37,8 @@ nav li { list-style-type:none;
 nav li { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-nav li a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
+nav li a { display: block;
+  font-weight: bold; 
 }
 /* specify mouse state styles */
 /* mouseout (default) */
