--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -11,6 +11,15 @@ body {text-align:center; background: #bee8ff; font-family:"times new roman"; fon
 header {width:100%; height:156px; background-image:url('images/header2.jpg'); text-align:center; background-repeat:no-repeat; background-position:center top;}
 img { border:0;
 }
+#leftcol { float:left; width: 310px; vertical-align:top;
+}
+#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+}
+#midcol { margin-left:315px; margin-right:145px; margin-top:10px;
+vertical-align:top;
+}
+
+
 #creditcol { float:right; width:125px; text-align:center;
 }
 #midcontent { margin:0 135px 0 145px; text-align:center;
