--- a/nav[1].css
+++ b/nav[1].css
@@ -50,6 +50,7 @@ body {
   margin: 0px;
   padding: 0px;
 }
+/*
 #nav ul li a {
   display: block;
   padding: .8em;
@@ -59,9 +60,11 @@ body {
   border-right: 1px solid #34495e;
   font-size: .9em;
 }
+  
 #nav ul li a:hover {
   background: #138a72;
 }
+  */
 #nav ul li:last-of-type a {
   border-right: 0px;
 }
