--- a/CSS/gallery-one-col.css
+++ b/CSS/gallery-one-col.css
@@ -21,25 +21,25 @@ h2 {font-size:large; font-family:"times new roman"; text-align:center;
 /*PAGE LAYOUT*/
 body {margin:auto; width:970px;
 }
-header { width:970px;
+header#gallery-one-colheader { width:970px;
 }
-nav { float:left; margin-left:10px; width:115px;
+nav#gallery-one-colnav { float:left; margin-left:10px; width:115px;
 }
-nav ul { margin-left:0; border:0; width:115px;
+nav#gallery-one-colnav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#rightcol { width:150px; float:right; text-align:center;
+div#gallery-one-colrightcol { width:150px; float:right; text-align:center;
 }
-#rightcol p.advert {font-size:small; margin-top:190px;
+div#gallery-one-colrightcol p.advert {font-size:small; margin-top:190px;
 }
 /*set middle column for main content*/
-#midcol { margin-left:135px; margin-right:155px;
+div#gallery-one-colmidcol { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-#gallery-block { position:relative; left: 90px; top:30px;
+div#gallery-one-colgallery-block { position:relative; left: 90px; top:30px;
 }
 /*set footer*/
-footer { clear:both; color:black; text-align:center; width:970px;
+footer.data#gallery-one-colfooter { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
