--- a/CSS/gallery-2col.css
+++ b/CSS/gallery-2col.css
@@ -1,7 +1,7 @@
 ﻿@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';
 /* Listing 2-6b provides the CSS presentation instructions for a 3 column gallery set in a real world page.
 Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) */
-/*set attributes for consistent appearance in all browsers*/
+/*set attributes for consistent appearance in all browsers*
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
 /*set images to have no borders*/
