--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -1,4 +1,4 @@
-﻿html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 0; margin: 0; 
+﻿html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 10px; margin: 0; 
 }
 header, footer, section, article, nav { display:block; 
 }
