--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -6,7 +6,7 @@ body {text-align:center; background: #bee8ff; font-family:"times new roman"; fon
 }
 #container {width:97%; max-width:960px; min-width:780px; margin:auto;
 }
-#main-content { width:100%; margin:0; padding:0;
+#main-content { width:100%; margin:10px; padding:0;
 }
 header {width:100%; height:156px; position: relative; top: -65px; background-image:url('images/header2.jpg'); text-align:center; border-bottom:10px white solid;  border-left:10px white solid;
 border-right:10px white solid; border-bottom:10px white solid; background-repeat:no-repeat; background-position:center top;}
