--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -38,7 +38,7 @@ br.clear { clear:both;
 }
 #mid-right-col {width:47%; float:right; text-align:left;
 }
-h1 { padding-top:0px; margin:0; text-align:center; font-size:200%;
+h1 { padding-top:0px; margin:50px; text-align:center; font-size:200%;
 }
 h2 { margin:50px 0 5px 0; font-size:150%; font-weight:bold; 
 }
