--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -1,4 +1,4 @@
-﻿html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 10px; margin: 0; 
+html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 10px; margin: 0; 
 }
 header, footer, section, article, nav { display:block; 
 }
@@ -58,7 +58,7 @@ height:42px;
 #hnav li a {text-decoration:none; color:white; font-weight:bold; width:120px; padding:5px; text-align:center; 
 }
 /*mouseOut state (default)*/
-#hnav li a { position: relative; top: -25px; background: #1A9CE0; border: 4px outset #AABAFF; text-align:center; margin-right:5px;
+#hnav li a { position: relative; top: -30px; background: #1A9CE0; border: 4px outset #AABAFF; text-align:center; margin-right:5px;
 }
 /* mouseover */
 #hnav li a:hover { background: #0A4ADF;   border: 4px outset #8ABAFF; width:120px; 
