--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -2,7 +2,7 @@ html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 10px; margin: 0;
 }
 header, footer, section, article, nav { display:block; 
 }
-body {text-align:center; background: #bee8ff; font-family:"times new roman"; font-size:medium; color:navy; 
+body {text-align:center; background: #bee8ff; font-family:"times new roman"; font-size:100%; color:navy; 
 }
 #container {width:97%; max-width:960px; min-width:780px; margin:auto;
 }
