--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -120,7 +120,7 @@ height:42px;
 #hnav li a { position: relative; top:30px; background: #1A9CE0; border: 4px outset #AABAFF; text-align:center; margin-right:5px;
 }
 /* mouseover */
-#hnav li a:hover { background: #0A4ADF;   border: 4px outset #8ABAFF; width:120px; 
+#hnav li a:hover { background: #0A4ADF;   border: 4px outset #8ABAFF; width:63em; 
 }
 /* omousedown */
 #hnav li a:active 	{ background:#ABCBFF;  border: 4px inset #ABCBFF; 
