--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -3749,7 +3749,121 @@ br.clear {
 /* https://www.reddit.com/r/VISITDURBAN/comments/1q2745h/why_i_started_visit_durban_from_new_yorkusa/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button */
 
 
+html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li { padding: 10px; margin: 0; 
+}
+header, footer, section, article, nav { display:block; 
+}
+body {text-align:center; background: #bee8ff; font-family:"times new roman"; font-size:100%; color:navy; 
+}
+#container {width:97%; max-width:960px; min-width:780px; margin:auto;
+}
+#main-content { width:100%; margin:10px; padding:0;
+}
+header {width:100%; height:156px; position: relative; top: 55px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
+border-right:10px white solid; border-bottom:10px white solid; background-repeat:no-repeat; background-position:center top;}
+img { border:0;
+}
+#leftcol { float:left; width: 310px; vertical-align:top;
+}
+#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+}
+#midcol { margin-left:315px; margin-right:145px; margin-top:10px;
+vertical-align:top;
+}
 
+
+#creditcol { float:right; width:125px; text-align:center;
+}
+#midcontent { margin:0 135px 0 145px; text-align:center;
+}
+#content { background-color:transparent; border-left:10px white solid;
+border-right:10px white solid; border-bottom:10px white solid; width: 904px;
+margin-top:-60px; margin-left:auto; margin-right:auto; padding:8px;
+font-size:100%; color:maroon;
+}
+footer {text-align:center; clear:both;
+}
+br.clear { clear:both;
+}
+#mid-left-col {width:47%; float:left; text-align:left;
+}
+#mid-right-col {width:47%; float:right; text-align:left;
+}
+h1 { padding-top:0px; margin:50px; text-align:center; font-size:200%;
+}
+h2 { margin:50px 0 5px 0; font-size:150%; font-weight:bold; 
+}
+h3 { font-size:100%; color:midnightblue; margin:0 0 -5px 0;
+}
+p.lft {text-align:left;
+}
+p.cntr {text-align:center;
+}
+/*set horizontal menu buttons general style*/
+#hnav {display:inline-block;  margin:10px auto 10px auto; width:450px; 
+height:42px; 
+}
+#hnav li {margin:10px; float:left; text-align:center; padding:5px;  list-style-type:none;
+}
+/*set general anchor style to fill the container*/
+#hnav li a {text-decoration:none; color:white; font-weight:bold; width:120px; padding:5px; text-align:center; 
+}
+/*mouseOut state (default)*/
+#hnav li a { position: relative; top:30px; background: #1A9CE0; border: 4px outset #AABAFF; text-align:center; margin-right:5px;
+}
+/* mouseover */
+#hnav li a:hover { background: #0A4ADF;   border: 4px outset #8ABAFF; width:120px; 
+}
+/* omousedown */
+#hnav li a:active 	{ background:#ABCBFF;  border: 4px inset #ABCBFF; 
+}
+/* set vertical button menu position */
+nav {width:130px; float:left; position: relative; top: -20px;
+}
+ul	{  margin-left:0; padding-left:0;   
+}
+/* set general side button styles */
+li { width:115px; list-style-type :none; margin-bottom: 3px; text-align: center; 
+}
+/* set general anchor styles */
+li a { display: block; width:115px; color: white; font-weight: bold; text-decoration: none 
+}
+/* specify state styles... */
+/* mouseout (default) */
+li a { background: #1A9CE0;  border: 4px outset #AABAFF;
+}
+/* mouseover */
+li a:hover	{ display:block; background: #0A4ADF; border: 4px outset #8ABAFF; width:115px;
+}
+/* omousedown */
+li a:active { background:#AECBFF; border: 4px inset #AECBFF; 
+}
+br.clear { clear:both; }
+/*various font sizes and colours*/
+.tiny { text-align: center; font-family: Arial; font-size: 8pt; color: #000000; 
+}
+p.cntr { text-align:center; 
+}
+p.lft { text-align:left; margin-top: 1px; 
+}
+p.right {text-align:right; 
+}
+@media (min-width: 48em) {
+  #nav ul {
+    /* older flexbox */
+    display: -ms-flexbox;
+    flex-direction: -ms-row;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    box-orient: horizontal;
+    /* newer flexbox */
+    display: flex;
+    flex-direction: row;
+  }
+}
 
 
 
