--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -27,8 +27,8 @@ h3 { font-size:100%; color:white; margin:0 0 6px 0;
 }
 #midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
-/* set side menu block position and width*
-nav { margin:10px 30px 0 10px; width:135px; float:right; 
+/* set side menu block position and width*/
+nav#nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }
 /*Set list style within the menu block only. This removes bullets*/
 nav li { list-style-type:none; 
