--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -40,7 +40,7 @@ h1#starter-page-h1 { padding-top:0px; margin:50px; text-align:center; font-size:
 }
 h2#starter-page-h2 { margin:50px 0 5px 0; font-size:150%; font-weight:bold; 
 }
-h3#starter-page- { font-size:115%; color:midnightblue; margin:0 0 -5px 0;
+h3#starter-page-h3 { font-size:115%; color:midnightblue; margin:0 0 -5px 0;
 }
 p.lft {text-align:left;
 }
