--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -6,6 +6,9 @@ body {text-align:center; background: #bee8ff; font-family:"times new roman"; fon
 }
 div#starter-page-container.data {width:97%; max-width:960px; min-width:780px; margin:auto;
 }
+div.row {
+  display: block; unicode-bidi:isolate;
+}
 #starter-page-main-content { width:100%; margin:10px; padding:0;
 }
 header {width:100%; height:156px; position: relative; top: 125px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
