--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -13,6 +13,10 @@ div.col-12 {
   display:block;
   unicode-bidi: isolate;
 }
+/* set vertical button menu position */
+nav#starter-page-nav.data {width:130px; float:left; position: relative; top:29px; left:60px
+}
+
 #starter-page-main-content { width:100%; margin:10px; padding:0;
 }
 header {width:100%; height:156px; position: relative; top: 125px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
@@ -71,9 +75,7 @@ height:42px;
 /* omousedown */
 #starter-page-hnav li a:active 	{ background:#ABCBFF;  border: 4px inset #ABCBFF; 
 }
-/* set vertical button menu position */
-nav#starter-page-nav {width:130px; float:left; position: relative; top:29px; left:60px
-}
+
 ul	{  margin-left:-70px; padding-left:0;   
 }
 /* set general side button styles */
