--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -51,7 +51,7 @@ h1#starter-page-h1 { padding-top:0px; margin:0px; text-align:center; font-size:x
 }
 h2#starter-page-h2 { margin:50px 0 5px 0; font-size:x-large; font-weight:bold; 
 }
-h3#starter-page-h3 { font-size:115%; color:midnightblue; margin:0 0 -5px 0;
+h3#starter-page-h3 { font-size:large; color:midnightblue; margin:0 0 -5px 0;
 }
 p.lft {text-align:left;
 }
