--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -6,9 +6,13 @@ body { background:#fff url(images/green-grad.jpg) repeat-x; margin:auto; box-sha
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block; 
 }
+/*
 header {width:920px; height:180px; padding:0; border:10px solid hsla(0, 0%,100%,.5); 
   background: url(/CSS/images/header3.jpg); margin:50px auto; 
 }
+*/
+header {width:98%; height:156px; position: relative; top: -75px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
+border-right:10px white solid; border-bottom:10px white solid; background-repeat:no-repeat; background-position:center top;}
 h1 { font-size:xxx-large; color :white; position: relative; left:90px; top: 80px; width:650px; 
 }
 #rosette { position:relative; left:380px; top:-30px; }
@@ -185,8 +189,7 @@ body {text-align:center; font-family:"times new roman"; font-size:100%; color:na
 }
 #main-content { width:100%; margin:10px; padding:0;
 }
-header {width:98%; height:156px; position: relative; top: -75px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
-border-right:10px white solid; border-bottom:10px white solid; background-repeat:no-repeat; background-position:center top;}
+
 img { border:0;
 }
 #leftcol { float:left; width: 310px; vertical-align:top;
