--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -91,11 +91,13 @@ vertical-align:top;
 }
 #midcontent { margin:0 135px 0 145px; text-align:center;
 }
+/*
 #content { background-color:transparent; border-left:10px white solid;
 border-right:10px white solid; border-bottom:10px white solid; width: 904px;
 margin-top:-55px; margin-left:auto; margin-right:auto; padding:8px;
 font-size:100%; color:maroon;
 }
+*/
 footer {text-align:center; clear:both;
 }
 br.clear { clear:both;
@@ -204,11 +206,13 @@ vertical-align:top;
 }
 #midcontent { margin:0 135px 0 145px; text-align:center;
 }
+/*
 #content { background-color:transparent; border-left:10px white solid;
 border-right:10px white solid; border-bottom:10px white solid; width: 944px;
 margin-top:-125px; margin-left:auto; margin-right:auto; padding:8px;
 font-size:100%; color:maroon;
 }
+*/
 footer {text-align:center; clear:both;
 }
 br.clear { clear:both;
